--- a/index.html
+++ b/index.html
@@ -13,22 +13,50 @@
 
 </head>
 <body ng-controller="ctrl">
-	<canvas id = "line" class = "chart chart-line" chart-data = "graph1DisplayData"
-	chart-labels = "graph1DisplayLabels" chart-series = "graph1DisplaySeries"
-	chart-options = "graph1options"></canvas>
+	<!--GRAPH 2 -->
+	<canvas id = "bar" class = "chart chart-bar" chart-data = "graph2DisplayData"
+	chart-labels = "graphDisplayLabels" chart-series = "graph2DisplaySeries"
+	chart-options = "graph2options"></canvas>
 
-	<br>
-	<!-- <canvas id = "bar" class = "chart chart-bar" chart-data = "graph2data"
-	chart-labels = "graph1labels" chart-series = "graph2series"
-	chart-options = "graph2options"></canvas> -->
-	<select multiple ng-model = "myIndex">
-		<option ng-click = "refresh()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
+	<select multiple ng-model = "myIndex2">
+		<option ng-click = "refreshG2()" ng-repeat = "airport in graph2series" value = {{graph2series.indexOf(airport)}} name = {{ airport }} > {{ airport }} </option>
 	</select>
-	<label for "airlineFromMonth">From:</label>
-	<input id = "airlineFromMonth" name = "airlineFromMonth" type = "month" ng-Mouseup = "refresh()" ng-model = "airlineFromMonth" min = "2010-01" max = "2013-12">
-	<label for "airlineToMonth">To:</label>
-	<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-Mouseup = "refresh()" ng-model = "airlineToMonth" min = "2010-01" max = "2013-12">
+	<label for "FromMonth">From:</label>
+	<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+	<label for "ToMonth">To:</label>
+	<input id = "ToMonth" name = "ToMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
 
-	{{ airlineFromMonth }}
-	{{ airlineToMonth }}
+	<fieldset>
+		<legend>Add A Claim</legend>
+		Airport:<br>
+		<select ng-model = "inputAirport">
+			<option ng-repeat = "airport in graph2series" name = {{ airport }}>{{ airport }}</option>
+		</select>
+		<label for "airportInputDate">Date:</label>
+		<input id = "airportInputDate" ng-model = "airportInputDate" name = "airportInputDate" type = "month" min = "2010-01" max = "2013-12">
+	</fieldset>
+	<button type = "button" ng-click = "addG2()">Submit</button>
+	<!-- GRAPH 1 -->
+	<!-- <canvas id = "line" class = "chart chart-line" chart-data = "graph1DisplayData"
+	chart-labels = "graphDisplayLabels" chart-series = "graph1DisplaySeries"
+	chart-options = "graph1options"></canvas>
+	<select multiple ng-model = "myIndex">
+		<option ng-click = "refreshG1()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
+	</select>
+	<label for "FromMonth">From:</label>
+	<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+	<label for "airlineToMonth">To:</label>
+	<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
+	<fieldset>
+		<legend>Add A Claim</legend>
+		Airline:<br>
+		<select ng-model = "inputAirline">
+			<option ng-repeat = "airline in graph1series" name = {{ airline }}>{{ airline }}</option>
+		</select>
+		<label for "airlineInputDate">Date:</label>
+		<input id = "airlineInputDate" ng-model = "airlineInputDate" name = "airlineInputDate" type = "month" min = "2010-01" max = "2013-12">
+		<input id = "cost" ng-model = "inputCost" type = "number">
+	</fieldset>
+	<button type = "button" ng-click = "addG1()">Submit</button> -->
+</body>
 </html>
