--- a/index.html
+++ b/index.html
@@ -10,53 +10,62 @@
 	<script src="plugins/fusioncharts.charts.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 	<script src="plugins/angular-chart.min.js"></script>
-
+	<!--CSS Styling-->
+	<link rel="stylesheet" href = "tsaproj.css">
 </head>
 <body ng-controller="ctrl">
+	<button type = "button" ng-click = "showGraph2()">Average Claims Per Month</button>
+	<button type = "button" ng-click = "showGraph1()">Value Loss Per Month</button>
 	<!--GRAPH 2 -->
-	<canvas id = "bar" class = "chart chart-bar" chart-data = "graph2DisplayData"
-	chart-labels = "graphDisplayLabels" chart-series = "graph2DisplaySeries"
-	chart-options = "graph2options"></canvas>
+	<div id = "graph2" class = "graphs" ng-show = "showGraph2Status">
+			<canvas id = "bar" class = "chart chart-bar" chart-data = "graph2DisplayData"
+			chart-labels = "graphDisplayLabels" chart-series = "graph2DisplaySeries"
+			chart-options = "graph2options"></canvas>
+			<select multiple ng-model = "myIndex2">
+				<option ng-click = "refreshG2()" ng-repeat = "airport in graph2series" value = {{graph2series.indexOf(airport)}} name = {{ airport }} > {{ airport }} </option>
+			</select>
+			<label for "FromMonth">From:</label>
+			<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+			<label for "ToMonth">To:</label>
+			<input id = "ToMonth" name = "ToMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
 
-	<select multiple ng-model = "myIndex2">
-		<option ng-click = "refreshG2()" ng-repeat = "airport in graph2series" value = {{graph2series.indexOf(airport)}} name = {{ airport }} > {{ airport }} </option>
-	</select>
-	<label for "FromMonth">From:</label>
-	<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
-	<label for "ToMonth">To:</label>
-	<input id = "ToMonth" name = "ToMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
-
-	<fieldset>
-		<legend>Add A Claim</legend>
-		Airport:<br>
-		<select ng-model = "inputAirport">
-			<option ng-repeat = "airport in graph2series" name = {{ airport }}>{{ airport }}</option>
-		</select>
-		<label for "airportInputDate">Date:</label>
-		<input id = "airportInputDate" ng-model = "airportInputDate" name = "airportInputDate" type = "month" min = "2010-01" max = "2013-12">
-	</fieldset>
-	<button type = "button" ng-click = "addG2()">Submit</button>
+			<fieldset>
+				<legend>Add A Claim</legend>
+				Airport:<br>
+				<select ng-model = "inputAirport">
+					<option ng-repeat = "airport in graph2series" name = {{ airport }}>{{ airport }}</option>
+				</select>
+				<label for "airportInputDate">Date:</label>
+				<input id = "airportInputDate" ng-model = "airportInputDate" name = "airportInputDate" type = "month" min = "2010-01" max = "2013-12">
+			</fieldset>
+			<button type = "button" ng-click = "addG2()">Submit</button>
+	</div>
+	<br>
 	<!-- GRAPH 1 -->
-	<!-- <canvas id = "line" class = "chart chart-line" chart-data = "graph1DisplayData"
-	chart-labels = "graphDisplayLabels" chart-series = "graph1DisplaySeries"
-	chart-options = "graph1options"></canvas>
-	<select multiple ng-model = "myIndex">
-		<option ng-click = "refreshG1()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
-	</select>
-	<label for "FromMonth">From:</label>
-	<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
-	<label for "airlineToMonth">To:</label>
-	<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
-	<fieldset>
-		<legend>Add A Claim</legend>
-		Airline:<br>
-		<select ng-model = "inputAirline">
-			<option ng-repeat = "airline in graph1series" name = {{ airline }}>{{ airline }}</option>
-		</select>
-		<label for "airlineInputDate">Date:</label>
-		<input id = "airlineInputDate" ng-model = "airlineInputDate" name = "airlineInputDate" type = "month" min = "2010-01" max = "2013-12">
-		<input id = "cost" ng-model = "inputCost" type = "number">
-	</fieldset>
-	<button type = "button" ng-click = "addG1()">Submit</button> -->
+	<div id = "graph1" class = "graphs" ng-show = "showGraph1Status">
+			<canvas id = "line" class = "chart chart-line" chart-data = "graph1DisplayData"
+			chart-labels = "graphDisplayLabels" chart-series = "graph1DisplaySeries"
+			chart-options = "graph1options"></canvas>
+			<select multiple ng-model = "myIndex">
+				<option ng-click = "refreshG1()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
+			</select>
+			<label for "FromMonth">From:</label>
+			<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+			<label for "airlineToMonth">To:</label>
+			<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
+			<fieldset>
+				<legend>Add A Claim</legend>
+				Airline:<br>
+				<select ng-model = "inputAirline">
+					<option ng-repeat = "airline in graph1series" name = {{ airline }}>{{ airline }}</option>
+				</select>
+				<label for "airlineInputDate">Date:</label>
+				<input id = "airlineInputDate" ng-model = "airlineInputDate" name = "airlineInputDate" type = "month" min = "2010-01" max = "2013-12">
+				<input id = "cost" ng-model = "inputCost" type = "number">
+				<button type = "button" ng-click = "addG1()">Submit</button>
+			</fieldset>
+	</div>
+
+
 </body>
 </html>
