--- a/index.html
+++ b/index.html
@@ -14,31 +14,42 @@
 	<link rel="stylesheet" href = "tsaproj.css">
 </head>
 <body ng-controller="ctrl">
-	<button type = "button" ng-click = "showGraph2()">Average Claims Per Month</button>
-	<button type = "button" ng-click = "showGraph1()">Value Loss Per Month</button>
+	<div id = "toggleButtons">
+		<button type = "button" ng-click = "showGraph2()">Average Claims Per Month</button>
+		<button type = "button" ng-click = "showGraph1()">Value Loss Per Month</button>
+	</div>
 	<!--GRAPH 2 -->
 	<div id = "graph2" class = "graphs" ng-show = "showGraph2Status">
 			<canvas id = "bar" class = "chart chart-bar" chart-data = "graph2DisplayData"
 			chart-labels = "graphDisplayLabels" chart-series = "graph2DisplaySeries"
 			chart-options = "graph2options"></canvas>
-			<select multiple ng-model = "myIndex2">
-				<option ng-click = "refreshG2()" ng-repeat = "airport in graph2series" value = {{graph2series.indexOf(airport)}} name = {{ airport }} > {{ airport }} </option>
-			</select>
-			<label for "FromMonth">From:</label>
-			<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
-			<label for "ToMonth">To:</label>
-			<input id = "ToMonth" name = "ToMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
-
 			<fieldset>
-				<legend>Add A Claim</legend>
-				Airport:<br>
-				<select ng-model = "inputAirport">
-					<option ng-repeat = "airport in graph2series" name = {{ airport }}>{{ airport }}</option>
-				</select>
-				<label for "airportInputDate">Date:</label>
-				<input id = "airportInputDate" ng-model = "airportInputDate" name = "airportInputDate" type = "month" min = "2010-01" max = "2013-12">
+					<legend>Filter</legend>
+					<label  class = "selectLabels" for = "filterAirportSelector">By Airport</label>
+					<select id = "filterAirportSelector" multiple ng-model = "myIndex2">
+						<option ng-click = "refreshG2()" ng-repeat = "airport in graph2series" value = {{graph2series.indexOf(airport)}} name = {{ airport }} > {{ airport }} </option>
+					</select>
+					<hr>
+					Time Window
+					<br><br>
+					<label for "FromMonth">From:</label>
+					<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+					<br>
+					<label for "ToMonth">To:</label>
+					<input id = "ToMonth" name = "ToMonth" type = "month" ng-mouseleave = "refreshG2()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
 			</fieldset>
-			<button type = "button" ng-click = "addG2()">Submit</button>
+			<fieldset>
+					<legend>Add A Claim</legend>
+					<label for = "airportSelector">Airport</label>
+					<select id = "airportSelector" ng-model = "inputAirport">
+						<option ng-repeat = "airport in graph2series" name = {{ airport }}>{{ airport }}</option>
+					</select>
+					<br>
+					<label for "airportInputDate">Date:</label>
+					<input id = "airportInputDate" ng-model = "airportInputDate" name = "airportInputDate" type = "month" min = "2010-01" max = "2013-12">
+					<br>
+					<button class = "formSubmit" type = "button" ng-click = "addG2()">Submit</button>
+			</fieldset>
 	</div>
 	<br>
 	<!-- GRAPH 1 -->
@@ -46,24 +57,38 @@
 			<canvas id = "line" class = "chart chart-line" chart-data = "graph1DisplayData"
 			chart-labels = "graphDisplayLabels" chart-series = "graph1DisplaySeries"
 			chart-options = "graph1options"></canvas>
-			<select multiple ng-model = "myIndex">
-				<option ng-click = "refreshG1()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
-			</select>
-			<label for "FromMonth">From:</label>
-			<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
-			<label for "airlineToMonth">To:</label>
-			<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
+			<fieldset>
+			<legend>Filter</legend>
+					<label class = "selectLabels" for = "filterAirlineSelector">By Airline</label>
+					<select id = "filterAirlineSelector" multiple ng-model = "myIndex">
+						<option ng-click = "refreshG1()" ng-repeat = "airline in graph1series" value = {{graph1series.indexOf(airline)}} name = {{ airline }} > {{ airline }} </option>
+					</select>
+					<br>
+					<hr>
+					Time Window
+					<br><br>
+					<label for "FromMonth">From:</label>
+					<input id = "FromMonth" name = "FromMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "FromMonth" min = "2010-01" max = "2013-12">
+					<br>
+					<label for "airlineToMonth">To:</label>
+					<input id = "airlineToMonth" name = "airlineToMonth" type = "month" ng-mouseleave = "refreshG1()" ng-model = "ToMonth" min = "2010-01" max = "2013-12">
+			</fieldset>
 			<fieldset>
 				<legend>Add A Claim</legend>
-				Airline:<br>
-				<select ng-model = "inputAirline">
+				<label for = "airlineSelector">Airline</label>
+				<select id = "airlineSelector" ng-model = "inputAirline">
 					<option ng-repeat = "airline in graph1series" name = {{ airline }}>{{ airline }}</option>
 				</select>
-				<label for "airlineInputDate">Date:</label>
+				<br>
+				<label for = "airlineInputDate">Date:</label>
 				<input id = "airlineInputDate" ng-model = "airlineInputDate" name = "airlineInputDate" type = "month" min = "2010-01" max = "2013-12">
-				<input id = "cost" ng-model = "inputCost" type = "number">
-				<button type = "button" ng-click = "addG1()">Submit</button>
+				<br>
+				<label for = "cost">Cost ($)</label>
+				<input id = "cost" name = "cost" ng-model = "inputCost" type = "number">
+				<br>
+				<button class = "formSubmit" type = "button" ng-click = "addG1()">Submit</button>
 			</fieldset>
+
 	</div>
 
 
