Back to where I was with my last project minus CSS.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </body>
 
 </html>
-<!-- <body ng-controller="ctrl">
+<body ng-controller="ctrl">
 	 Toggle buttons for the two graphs
 	<div id = "toggleButtons">
 		<button type = "button" ng-click = "showGraph2()">Average Claims Per Month</button>
@@ -118,4 +118,4 @@
 
 
 </body>
-</html> -->
+</html>
