--- a/app/valueLossPerMonth/valueLossPerMonth.html
+++ b/app/valueLossPerMonth/valueLossPerMonth.html
@@ -43,4 +43,6 @@
         <input name = "cost" ng-model = "inputCost" type = "number">
         <button class = "formSubmit" type = "button" ng-click = "addClaim()">SUBMIT</button>
       </fieldset>
+
+      {{ time }}
 </div>
